# pinky-bar

./: .README.md.swp  .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  Makefile.skel  README.md  TODO  aclocal.m4  bootstrap  config.status  configure  configure.ac  konfigure.skel  portable_sed.pl  set.pl  stay_portable.pl
.circleci/: config.yml
.github/: CONTRIBUTING  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
.github/workflows/: c-cpp.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
doc/: Makefile  Makefile2  README.md  pinkybar.1  pinkybar.info  pinkybar.texi
doc/test/: Makefile  make_template
extra/: README.md  _pinkybar  man_template.pdc  pinkybar.1  pinkybar.pdc
extra/FreeBSD/: .Makefile.swp  Makefile  README.md  distinfo
extra/FreeBSD/scripts/: post-extract
extra/FreeBSD/work/pinky-bar-a875ffd/: configure.ac  set.pl
extra/FreeBSD/work/pinky-bar-a875ffd/doc/: man_template.pdc
extra/FreeBSD/work/pinky-bar-a875ffd/src/: net.c  (+3 more)
extra/Gentoo/: README.md
extra/Gentoo/app-admin/pinky/: metadata.xml  pinky-bar-9999.ebuild
extra/Gentoo/app-admin/pinkybar/: metadata.xml  pinkybar-9999.ebuild
extra/Gentoo/app-admin/progname/: metadata.xml  pinky-bar-9999.ebuild
extra/bash_zsh/: _pinkybar  pinkybar
extra/deprecated/: .travis.yml  Makefile.skel  README.md  bootstrap
extra/misc/: openbsd_bugs.md
extra/py3status/: README.md  f2f  pinkybar.py
extra/py3status-module/: pinkybar.py
extra/scripts/: README.md  drive-temperature.sh  pinky.R  pinky.lisp  pinky.lua  pinky.pl  pinky.py  pinky.pyo  pinky.rs  pinky.s  pinky.sl  pinky.tcl  pinky2.go
m4/: 1errs.m4  alsa.m4  cflagz.m4  curll.m4  dvd.m4  extend.m4  mpd.m4  ncurses.m4  net.m4  ocaml.m4  perl.m4  sensors.m4  sqlite.m4  tests.m4  the_rest_funcs.m4  type.m4  typez.m4  weather.m4  x11.m4
pkg/FreeBSD/: Makefile
src/: .common.c.swp  Makefail.skel  Makefile  Makefile.am  Makefile.in  R.c  c++.cpp  common.c  constants.h  constants1.h  constants2.h  cpu.c  cpu.h  cpu_brand.S  curl.c  curses.c  dwmbar  ecl.c  extend.c  freebsd_functions.c  functions.c  functions.h  functions_constants.h  functions_prototypes.h  go.c  linux_functions.c  lua.c  mail.c  main.c  main_constants.h  ncurses.c  net.c  net.h  non_x11_colours.h  ocaml.c  openbsd_functions.c  options.c  packages.c  perl.c  pinky.ml  (+15 more)
src/.deps/: dwmbar-functions.Po  dwmbar-main.Po
src/include/: freebzd.h  functions_constants.h  headers.h  main_constants.h  ncurses_colours.h  non_x11_colours.h  openbzd.h  options_constants.h  options_generator.h  py3status_colours.h  x11_colours.h
src/include/colours/: awesomewm_colours.h  dzen2_colours.h  lemonbar_colours.h  no_colours.h  py3status_colours.h  tmux_colours.h  tput_colours.h  x11_colours.h  xmobar_colours.h
src/ported_or_not_included/: cpu_brand.S  cpu_cache.S  pinky_curses.c
src/prototypes/: R.h  common.h  cpp.hpp  cpu.h  curl.h  ecl.h  extend.h  functions.h  go.h  lua.h  mail.h  net.h  ocaml.h  options.h  packages.h  perl.h  python.h  ruby.h  rust.h  slang.h  sound.h  sqlite.h  tcl.h  weather.h  x11.h
(+4 files in other folders)
