SUBDIRS = src

dist_man_MANS = doc/pinkybar.1

# Optional, create and install
# the pinkybar info document
# info_TEXINFOS = doc/pinkybar.texi
# MAKEINFOFLAGS = --no-validate --no-warn --force

# To satisfy make dist
EXTRA_DIST =      \
	src/ncurses.c   \
	bootstrap       \
	README.md       \
	.gitignore      \
	m4              \
	doc             \
	extra
